<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuestBoard</string>
    <string name="hello_world">Hello, questing world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="enter_name">Enter username</string>
    <string name="enter_pass">Enter password</string>
    <string name="button_login">Log in!</string>
    <string name="button_register">Sign me up!</string>
    <string name="button_close">Close</string>
    <string name="welcome">Welcome!  Please sign in.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

	<string name="quest_name"></string>
	<string name="quest_alignment"></string>
	<string name="quest_description"></string>
	<string name="quest_location"></string>
	<string name="quest_NPC"></string>
	<string name="quest_NPC_location"></string>
	<string name="button_back">Back</string>

</resources>
