<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context="questboard.app.DetailsActivity">

	<TextView
		android:text="@string/hello_world"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/quest_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_name"/>

	<TextView
		android:id="@+id/quest_alignment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_alignment"/>

	<TextView
		android:id="@+id/quest_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_description"/>

	<TextView
		android:id="@+id/quest_location"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_location"/>

	<TextView
		android:id="@+id/quest_NPC"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_NPC"/>

	<TextView
		android:id="@+id/quest_NPC_location"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quest_NPC_location"/>

	<Button
		android:id="@+id/back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:text="@string/button_back"/>

</RelativeLayout>
